--- a/content/post/2021-02-08-ch4-hands-on-ml/index.zh-cn.Rmd
+++ b/content/post/2021-02-08-ch4-hands-on-ml/index.zh-cn.Rmd
@@ -12,12 +12,12 @@ tags:
 image : "image1.jpg"
 ---
 
-```{r setup, include=FALSE,eval=TRUE}
+```{r setup, include=FALSE,eval=FALSE}
 knitr::opts_chunk$set(collapse = TRUE,comment=">>",
                       engine.path = list(python = 'C:\\Users\\16504\\AppData\\Local\\Programs\\Python\\Python38\\python.exe'))
 ```
 
-```{r setup2, include=FALSE,eval=FALSE}
+```{r setup2, include=FALSE,eval=TRUE}
 knitr::opts_chunk$set(collapse = TRUE,comment=">>",
                       engine.path = list(python = 'C:\\Users\\lenovo\\AppData\\Local\\Programs\\Python\\Python39\\python.exe'))
 ```
@@ -421,6 +421,75 @@ from sklearn.linear_model import ElasticNet
 elastic_net = ElasticNet(alpha=0.1,l1_ratio=0.5)##l1_ratio指的是r
 elastic_net.fit(x,y)
 elastic_net.predict([[1.5]])
+
+##也可以使用SGDRgressor
+sgd_elastic = SGDRegressor(penalty="elasticnet",alpha=0.1,l1_ratio=0.5)
+sgd_elastic.fit(x,y.ravel())
+sgd_elastic.predict([[1.5]])
 ```
+
+### Early Stopping 
+
+另一个方法去正则化迭代的学习算法(如梯度下降)是：当验证集误差达到最小值的时候就停止训练；这种方法叫做**early stopping**,如下图所示：
+
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210304083008485.png)
+
+当学习算法学习的时候，在训练集和验证集上的误差都会降低，但是一段时间之后会出现在验证集上的误差上升的情况，这意味着模型开始过拟合，因此最好在未过拟合之前就停止训练模型(验证集误差最低)
+
+注意：在随机梯度下降或者小批次梯度下降中，曲线不会像上图那样平滑，因此很难判定是否达到最小值；一个解决方法就是：当训练一段时间之后，验证集的误差一直比最小值要高(每一个epoch之后就把验证集误差和之前所有的误差比较，看看是不是最小值，进行迭代更新)，就停止训练，记录下验证集误差最小时的模型参数
+
+```{python}
+##data
+np.random.seed(42)
+m = 100
+X = 6 * np.random.rand(m, 1) - 3
+y = 2 + X + 0.5 * X**2 + np.random.randn(m, 1)
+
+X_train, X_val, y_train, y_val = train_test_split(X[:50], y[:50].ravel(), test_size=0.5, random_state=10)
+```
+
+```{python results="hide"}
+from copy import deepcopy
+from sklearn.preprocessing import StandardScaler
+
+##数据预处理
+poly_scaler = Pipeline([
+        ("poly_features", PolynomialFeatures(degree=90, include_bias=False)),
+        ("std_scaler", StandardScaler())
+    ])
+
+X_train_poly_scaled = poly_scaler.fit_transform(X_train)
+X_val_poly_scaled = poly_scaler.transform(X_val)
+
+sgd_reg = SGDRegressor(max_iter=1, tol=-np.infty, warm_start=True,
+                       penalty=None, learning_rate="constant", eta0=0.0005, random_state=42)
+
+minimum_val_error = float("inf")
+best_epoch = None
+best_model = None
+for epoch in range(1000):
+    sgd_reg.fit(X_train_poly_scaled, y_train)  # continues where it left off
+    y_val_predict = sgd_reg.predict(X_val_poly_scaled)
+    val_error = mean_squared_error(y_val, y_val_predict)
+    if val_error < minimum_val_error:
+        minimum_val_error = val_error
+        best_epoch = epoch
+        best_model = deepcopy(sgd_reg)
+```
+
+```{python}
+best_epoch
+minimum_val_error
+```
+
+
+首先预处理步骤对数据进行多项式转化，然后进行归一化；SGDRegressor参数中设置max_iter=1意思是每次训练只进行一个epoch(因为后面显式地进行epoch的迭代),tol前面讲过(如果在某一个epoch上损失函数下降小于tol的数值，则训练停止),warm_start=T表示调用fit时会使用上次训练得到的模型参数作为初始值继续进行训练(热启动),random_state表示当对每个新的epoch都会进行shuffle(默认)时取的随机种子数，来保证结果可重复
+
+## 逻辑回归
+
+逻辑回归可以用来估计某个实例属于某一类别的概率，如果概率大于50%，则认为该实例属于该类(1),否则不属于该类(0),因此是二分类的分类器
+
+### 估计概率
+
 
 
