--- a/content/post/2021-03-04-ch6-hands-on-ml/index.zh-cn.Rmd
+++ b/content/post/2021-03-04-ch6-hands-on-ml/index.zh-cn.Rmd
@@ -151,7 +151,13 @@ H_t(T)=-\sum_k^K\frac{N_{tk}}{N_t}log2\frac{N_{tk}}{N_t}
 $$
 其中t表示叶节点,|T|是叶节点个数,$N_t$是t叶节点的样本数,$N_{tk}$是t叶节点中k类样本的个数
 
-将损失函数的第一项记作$C(T)$,损失函数可以写成：
+将损失函数的第一项记作$C(T)$,
+
+$$
+C(T)=\sum_{t=1}^{|T|}N_tH_t(T)=-\sum_{t=1}^{|T|}N_t\sum_k^K\frac{N_{tk}}{N_t}log2\frac{N_{tk}}{N_t}=-\sum_{t=1}^{|T|}\sum_k^KN_{tk}log2\frac{N_{tk}}{N_t}
+$$
+
+损失函数可以写成：
 
 $$
 C_{\alpha}(T)=C(T)+\alpha|T|
@@ -208,6 +214,20 @@ $$
 该决策树的决策边界可以用下图来表示：
 
 ![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210306162213679.png)
+
+##### 估计类的概率
+
+
+决策树也可以估计一个实例属于特定类的概率       
+首先找到这个实例所属的叶子节点，然后返回该节点中各类的训练实例所占的比例作为这个实例属于各个类的概率；比如现在有一个鸢尾花花瓣长5cm宽1.5cm，那么它所属的叶子节点为深度为2的左节点，所以决策树输出概率为:0%是setosa,90.7%(49/54)是versicolor,9.3%(5/54)是virginica，如果让决策树来预测这个花的类别，会输出class 1 (versicolor):
+
+```{python}
+tree_clf.predict_proba([[5,1.5]])
+
+tree_clf.predict([[5,1.5]])
+```
+
+需要注意的是：落在某个叶子节点中的所有实例的输出概率都是一样的(上面决策边界图里面同一个长方形里面的点)
 
 #### 回归
 
@@ -283,19 +303,26 @@ dot -Tpng iris_tree1.dot -o iris_tree2.png
 
 #### 剪枝
 
- 
+CART算法的剪枝和一般的决策树剪枝不同
 
-## 估计类的概率
+CART算法对决策树的每一个内部节点都进行剪枝，生成一个子决策树的序列；假设树的结构如下：
 
-决策树也可以估计一个实例属于特定类的概率       
-首先找到这个实例所属的叶子节点，然后返回该节点中各类的训练实例所占的比例作为这个实例属于各个类的概率；比如现在有一个鸢尾花花瓣长5cm宽1.5cm，那么它所属的叶子节点为深度为2的左节点，所以决策树输出概率为:0%是setosa,90.7%(49/54)是versicolor,9.3%(5/54)是virginica，如果让决策树来预测这个花的类别，会输出class 1 (versicolor):
+<center>
 
-```{python}
-tree_clf.predict_proba([[5,1.5]])
+![](https://picgo-wutao.oss-cn-shanghai.aliyuncs.com/img/image-20210308223511075.png)
 
-tree_clf.predict([[5,1.5]])
-```
+</center>
 
-需要注意的是：落在某个叶子节点中的所有实例的输出概率都是一样的(最开始那个决策边界图里面同一个长方形里面的点)
+设整体树为$T_0$,对$T_0$的任意内部节点t,可以计算以t为单节点的树的损失函数$C_\alpha(t)$和以t为根节点的子树的损失函数$C_\alpha(T_t)$;当$\alpha$充分小的时候$C_\alpha(T_t)<C_\alpha(t)$(对树的复杂度惩罚较小,较复杂的树能够较好的拟合数据，因此损失函数较低)，当$\alpha$增大到某一个值的时候,两者相等，也就是单节点的树和子树的损失函数值相等,但是单节点的树比较简单,因此取单节点树,即对树进行剪枝
+
+因此对$T_0$中的每个内部节点都可以计算一个两者相等时的$\alpha$值：
+
+$$
+g(t) = \frac{C(t)-C_\alpha(T_t)}{|T_t|-1}
+$$
+表示剪枝后整体损失函数减少的程度
+
+剪枝过程就为：对$T_0$的每个内部节点计算$g(t_i)$,剪去有最小$g(t_i)$的内部节点的子节点，得到子树$T_i$,然后继续对$T_i$进行剪枝,直到根节点；对于得到的子树序列$T_1,T_2,...,T_n$通过交叉验证的方法选择最优的子树$T_\alpha$,此时也可以确定相应的$\alpha$了
+
 
 
