--- a/content/post/2021-03-04-ch6-hands-on-ml/index.zh-cn.Rmd
+++ b/content/post/2021-03-04-ch6-hands-on-ml/index.zh-cn.Rmd
@@ -324,5 +324,17 @@ $$
 
 剪枝过程就为：对$T_0$的每个内部节点计算$g(t_i)$,剪去有最小$g(t_i)$的内部节点的子节点，得到子树$T_i$,然后继续对$T_i$进行剪枝,直到根节点；对于得到的子树序列$T_1,T_2,...,T_n$通过交叉验证的方法选择最优的子树$T_\alpha$,此时也可以确定相应的$\alpha$了
 
+#### Sci-kit learn中的剪枝参数
 
+https://scikit-learn.org/stable/modules/tree.html#minimal-cost-complexity-pruning
+
+https://towardsdatascience.com/how-to-tune-a-decision-tree-f03721801680
+
+## 其他参数
+
+上面已经用过了`DecisionTreeRegressor`和`DecisionTreeClassifier`类的中的一些参数(max_depth,random_state);现在来看一下其他的参数
+
+- `criterion`:可选gini或者entropy；表示不纯度的衡量指标
+- `random_state`:随机种子数，Sci-kit learn在选择最优的split的时候，并不是选择所有的特征，而是随机选择一部分特征(数量由`max_features`来控制)，从中选择不纯度指标最优的特征进行分割，因此具有“随机化”
+- `splitter`: 有两个选项：`best`和`random`;两者在对每个feature选择阈值来分割时有区别：`best`是使用不纯度指标来评估每个可能的阈值，从而找到最优的切分点，而`random`是利用一个均匀随机抽样的函数(函数输入是特征的最小值,最大值和上面提到的random_state，也就是说依据均匀分布在相应特征的取值范围内随机选一个值作为分割点)；因此**使用`random`参数带来的随机化可以在一定程度上减少过拟合**
 
