--- a/content/post/2021-03-09-ensemble-and-rf/index.zh-cn.Rmd
+++ b/content/post/2021-03-09-ensemble-and-rf/index.zh-cn.Rmd
@@ -26,3 +26,21 @@ knitr::opts_chunk$set(collapse = TRUE,comment=">>",
 
 为什么集成学习比单个的(弱)学习器的效果要好？可以从下面这个例子来理解：
 
+假设我们有一个硬币,每次抛硬币有51%的可能是正面朝上,有49%的可能是反面朝上;扔1000次,大部分朝上(朝上的硬币数目大于500)的概率为：
+
+$$
+P(X>500) = 1-binom(500,1000,0.51)
+$$
+在R里面计算得到概率为：
+```{r}
+1-pbinom(500,1000,0.51)
+```
+
+同理在扔10000次后，得到硬币大部分朝上的概率为：
+```{r}
+1-pbinom(5000,10000,0.51)
+```
+
+进行的实验次数越多，这个概率就越大(大数定理)
+
+现在我们想像：有1000个分类器,每个分类器正确预测的概率为51%,如果我们按照多数投票规则来整合1000个分类器，那么准确率可以达到72%(有超过一半预测的是正确的概率);但是这个前提是这些分类器是相互独立的,但在实际情况中很难保证这一点(一种增强独立性的策略就是使用多个非常不同的分类器)
